--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
 
     </div>
 
+    <div class="container-item-3">
+      <img class="spiderman js-tilt" src="assets/img/coverSpiderMan.png" alt="spiderMan">
+    </div>
+
+
   </section>
 
   <script src="js/app.js"></script>
